added: openapi / refactor: builder & handlexception & webhexcceptionhandler
