# src/main/java/com/hanpeq/chavez/clinic/builder/TokenResponseBuilder.java
@@ -1,6 +1,7 @@
 package com.hanpeq.chavez.clinic.builder;
 
 import com.hanpeq.chavez.clinic.dto.TokenResponse;
+import com.hanpeq.chavez.clinic.utils.constants.Constants;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Repository;
 
@@ -8,9 +9,12 @@ import org.springframework.stereotype.Repository;
 @AllArgsConstructor
 public class TokenResponseBuilder {
 
-    public TokenResponse builderTokenResponse(String token, String expiration){
+    public TokenResponse builderTokenResponse(String token, String expiration, String username){
         return TokenResponse.builder()
                 .token(token)
+                .type(Constants.STRING_ACCESS_TOKEN)
+                .username(username)
+                .authenticated(Constants.STRING_TRUE)
                 .expiration(expiration)
                 .build();
 
